# necli

./: .gitignore  AGENTS.md  CHANGELOG.md  DOCS.md  LICENSE  README.md  pyproject.toml
.data/agents/bug-hunter/: AGENT.md
.data/agents/code-reviewer/: AGENT.md
.data/agents/coordinator/: AGENT.md
.data/agents/doc-writer/: AGENT.md
.data/agents/perf-optimizer/: AGENT.md
.data/agents/refactorer/: AGENT.md
.data/agents/researcher-web/: AGENT.md
.data/agents/security-auditor/: AGENT.md
.data/agents/test-writer/: AGENT.md
src/: git_stats.py  logger.py  main.py  models.py  planner.py  system_prompt.py
src/agent/: __init__.py  agent_presets.py  block_stream.py  commit_agent.py  context.py  diff_render.py  display.py  duo.py  duo_render.py  events.py  executor.py  fs_watcher.py  loop.py  markdown.py  messages.py  project_stats.py  render_replay.py  render_store.py  result_cache.py  sanitizer.py  stream.py  stream_parser.py  stream_render.py  stream_tool_exec.py  subagent.py  subagent_api.py  subagent_display.py  subagent_git.py  subagent_render.py  syntax.py  telegram_handler.py  tg_format.py  tg_menu.py  theme_preview.py  think.py  undo_store.py
src/apis/: __init__.py  _context_pruner.py  _retry.py  agent_adapter.py  base.py  config.py  lsp_client.py  mcp_client.py  messages.py  model_discovery.py  models.py  opus48_debug.py  registry.py  telegram.py  tool_schemas.py
src/apis/definitions/: _example.json  aerolink.json  anthropic.json  cerebras.json  cohere.json  deepseek.json  fireworks.json  google.json  groq.json  hyperbolic.json  llamacpp.json  lmstudio.json  mistral.json  ollama.json  openai.json  openrouter.json  perplexity.json  sambanova.json  together.json  vllm.json  xai.json
src/commands/: headless.py  helpers.py  interactive.py  interactive_state.py  interactive_status.py  onboarding.py  permission_prompt.py  registry.py  slash.py  slash_handler.py
src/config/: __init__.py  constants.py  data_cleanup.py  hooks.py  i18n.py  lsp.py  mcp.py  paths.py  permissions.py  pinned.py  settings.py  ssh.py  themes.py  ui.py
src/hooks/: __init__.py  matcher.py  runner.py  schema.py
src/memory/: __init__.py  extract.py  insights.py  memdir.py
src/prompts/: __init__.py  _agent.py  _autonomous.py  _base.py  _core.py  _interaction.py  _modalities.py  _notices.py  _planning.py  _quality.py  _settings.py  _subagents.py  _tooling.py  _workflow.py  fenced.py  native.py
src/session/: __init__.py  _time.py  message.py  notes.py  session.py  storage.py  tokens.py
src/skills/: __init__.py  manager.py  registry.py
src/tests/: test_native_plan.py  test_prompt_paste.py
src/tools/: __init__.py  _html_unescape.py  _paths.py  arg_validation.py  auto_checks.py  background.py  call_parser.py  dir_ops.py  expand_result.py  file_checks.py  file_readers.py  image_search.py  json_repair.py  memory_tool.py  models.py  parser.py  poll.py  registry.py  shell.py  skill_tool.py  ssh.py  subagent.py  subagent_specs.py  web_fetch.py  web_search.py  workflow.py
src/ui/: __init__.py  _emoji_width.py  _filters.py  _keyreader.py  clipboard.py  clipboard_copy.py  completer.py  file_context.py  formatting.py  menu.py  poll.py  prompt.py  terminal_title.py
src/workflows/: __init__.py  render.py  runner.py  specs.py
tests/: conftest.py  test_anthropic_cache.py  test_hooks.py  test_memory.py
tests/unit/: test_planner.py
(+137 files in other folders)
